# u32string_utils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
tests/: CMakeLists.txt  atoX_integral.h  atoX_real.h  real_equal.h  stoX_integral.h  strtoX_integral.h  tests.cpp
u32string_utils/: CMakeLists.txt  u32caps.cpp  u32caps.h  u32charset.cpp  u32charset.h  u32strlib.cpp  u32strlib.h  u32utils.cpp  u32utils.h
u32string_utils/details/: integral_to_str.h  str_to_floating_point.h  str_to_integral.h
